ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: jodeh.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service 
            port:
              number: 5000
